Fix link alignment

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
 a {
     color:inherit;
     text-decoration:none;
-    line-height:25px;
+    line-height:100%;
 }
 
 
